<resources>
    <string name="app_name">My Application</string>
    <string name="kategoriler">Kategoriler</string>
    <string name="stoklar">Stoklar</string>
    <string name="sut_ve_sut_urunleri">Süt ve Süt Ürünleri</string>
    <string name="temizlik_urunleri">Temizlik ve Bakım</string>
    <string name="ekmek_ve_pasta">Ekmek ve Pasta</string>
    <string name="et_urunleri">Et ve Et Ürünleri</string>
    <string name="icecekler">içecekler</string>
    <string name="atistirmalik">Atıştırmalık</string>
    <string name="product_name">Ürün Adı</string>
    <string name="product_price">%s TL</string>
    <string name="product_count">0</string>
    <string name="azalt">azalt</string>
    <string name="arttir">arttır</string>
    <string name="product_image">product_image</string>
    <string name="satin_al">Satın al</string>
    <string name="sepetim">Sepetim</string>
    <string name="odemeyap">Ödeme Yap</string>
    <string name="product_name_string">Ürün Adı: %s</string>
    <string name="product_price_string">Fiyat: %s TL</string>
    <string name="product_count_string">Adet: %s Adet</string>
    <string name="total_price_string">Toplam Tutar: %2.f</string>
    <string name="zero">0</string>
    <string name="home_button">Ev Butonu</string>
    <string name="save_button">Kaydet</string>
    <string name="fiyat">Fiyat</string>
    <string name="adet">Adet</string>
    <string name="resim">Resim</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="authority_check">Ancak yetkili kişiyseniz değişiklik yapabilirsiniz \n yetkili kişimisiniz?</string>
    <string name="add_product">Ürün Ekle</string>
    <string name="product_name_text">Ürün Adı:</string>
    <string name="product_category_text">Ürün Kategori:</string>
    <string name="product_price_text">Ürün Fiyatı:</string>
    <string name="product_count_text">Ürün Adedi:</string>
    <string name="product_image_text">Ürün Resmi:</string>
    <string name="product_name_edittext">Ürün Adı:</string>
    <string name="product_category_edittext">Ürünün Kategorisi</string>
    <string name="product_price_edittext">Ürünün Fiyatı</string>
    <string name="product_count_edittext">Ürünün Adedi</string>
    <string name="urun_ekle">Ürün Ekle</string>
    <string name="sepet">SEPET</string>
    <string-array name="categories_array">
        <item>Atıştırmalık</item>
        <item>Ekmek ve Pasta</item>
        <item>Et ve Et Ürünleri</item>
        <item>Süt ve Süt Ürünleri</item>
        <item>Temizlik ve Bakım</item>
        <item>İçecekler</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ad_soyad">Ad Soyad</string>
    <string name="email">Email</string>
    <string name="sifre">Şifre</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="uye_ol">Üye ol</string>
    <string name="sepet_butonu">sepet butonu</string>
    <string name="yetkinlik">Yetkinlik</string>
    <string name="musteri">Müşteri</string>
    <string name="personel">Personel</string>

</resources>