<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/SignInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uye_ol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/editTextName"
        android:text="@string/ad_soyad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignInTextView" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints="name"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/nameTextView"
        app:layout_constraintStart_toEndOf="@+id/nameTextView"
        app:layout_constraintTop_toTopOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/authorityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/yetkinlik"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:labelFor="@id/editTextEmail"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/authorityTextView"
        app:layout_constraintTop_toBottomOf="@+id/authorityTextView" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/emailTextView"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="@+id/emailTextView" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:labelFor="@id/editTextPassword"
        android:text="@string/sifre"
        app:layout_constraintEnd_toEndOf="@+id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordTextView"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="@+id/passwordTextView" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/uye_ol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/musteri"
        app:layout_constraintBottom_toBottomOf="@+id/authorityTextView"
        app:layout_constraintStart_toEndOf="@+id/authorityTextView"
        app:layout_constraintTop_toTopOf="@+id/authorityTextView" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/personel"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />
</androidx.constraintlayout.widget.ConstraintLayout>