<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/CardView"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Text View to display Course Name-->

        <!--Text VIew to display COurse Rating-->
        <!--Image used in present in drawable folder-->

        <ImageView
            android:id="@+id/ProductImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ProductPrice"
            app:layout_constraintStart_toEndOf="@+id/ProductImage"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:ems="2"
            android:hint="@string/product_price"
            android:inputType="numberDecimal"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ProductCount"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ProductCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:ems="2"
            android:hint="@string/product_count"
            android:inputType="numberDecimal"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>